<resources>
    <string name="app_name">Sketcher</string>
    <string name="button_small">S</string>
    <string name="button_medium">M</string>
    <string name="button_large">L</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_share">SHARE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
